added an about page to the website

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Work+Sans:wght@300;400;500;600&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/df0baee841.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -45,12 +46,11 @@
       <div class="hero-overlay"></div>
       <div class="container">
         <div class="hero-content">
-          <h1 class="hero-title">Cultivating the Ausum Life</h1>
+          <h1 class="hero-title">Crafting a new vision for African lifestyle</h1>
           <p class="hero-subtitle">A bold, creative, and unapologetically African journey to reimagine lifestyle,
             business, and culture.</p>
           <div class="hero-cta">
-            <a href="#invest" class="btn btn-primary">Become a Founding Contributor</a>
-            <a href="#about" class="btn btn-secondary">Learn More</a>
+            <a href="#about" class="btn btn-secondary" style="width: 50%;">Learn More</a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
     <section class="about section" id="about">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">About Ausum Group</h2>
+          <h2 class="section-title">Our Story</h2>
           <div class="accent-line"></div>
         </div>
         <div class="about-content">
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="about-cta">
-          <a href="#ecosystem" class="btn btn-tertiary">Explore Our Pillars</a>
+          <a href="/about.html" class="btn btn-tertiary">Explore Our Story</a>
         </div>
       </div>
     </section>
@@ -94,7 +94,7 @@
     <section class="mission section" id="mission">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Our Mission & Vision</h2>
+          <h2 class="section-title">Our Mission</h2>
           <div class="accent-line"></div>
         </div>
         <div class="mission-content">
@@ -139,6 +139,7 @@
             </ul>
             <div class="pillar-overlay">
               <p>Our flagship company driving innovation and business growth across multiple sectors.</p>
+              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
             </div>
           </div>
 
@@ -153,6 +154,7 @@
             <div class="pillar-overlay">
               <p>Authentic African eyewear and lifestyle products that combine style, quality, and cultural heritage.
               </p>
+              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
             </div>
           </div>
 
@@ -166,6 +168,7 @@
             </ul>
             <div class="pillar-overlay">
               <p>Empowering small and medium enterprises with the tools and knowledge to scale effectively.</p>
+              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
             </div>
           </div>
 
@@ -180,20 +183,7 @@
             <div class="pillar-overlay">
               <p>Content platform sharing inspirational stories and insights from African innovators and entrepreneurs.
               </p>
-            </div>
-          </div>
-
-          <div class="pillar-card">
-            <div class="pillar-icon" data-icon="zane"></div>
-            <h3>Zane Beauty</h3>
-            <ul>
-              <li>Women empowerment</li>
-              <li>Beauty products</li>
-              <li>Logistics solutions</li>
-            </ul>
-            <div class="pillar-overlay">
-              <p>Beauty and personal care brand focused on empowering women through quality products and employment
-                opportunities.</p>
+              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
             </div>
           </div>
         </div>
@@ -326,34 +316,29 @@
     <section class="benefits section" id="benefits">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Founding Contributors Benefits</h2>
+          <h2 class="section-title">The Ausum Life Philosophy</h2>
           <div class="accent-line"></div>
         </div>
         <div class="benefits-content">
           <div class="benefit-card">
-            <div class="benefit-icon" data-icon="roi"></div>
-            <h3>The Ausum Growth Note</h3>
-            <p>50% Return on Investment in 15 months</p>
+            <div class="benefit-icon" data-icon="clarity"><i class="fa-solid fa-eye"></i></div>
+            <h3>Clarity</h3>
+            <p>Of vision, purpose and sight</p>
           </div>
           <div class="benefit-card">
-            <div class="benefit-icon" data-icon="access"></div>
-            <h3>Exclusive Access</h3>
-            <p>Early updates and behind-the-scenes insights</p>
+            <div class="benefit-icon" data-icon="ownership"><i class="fa-solid fa-house"></i></div>
+            <h3>Ownership</h3>
+            <p>Of one's identity, narractive entrepreneurial journey, and future</p>
           </div>
           <div class="benefit-card">
-            <div class="benefit-icon" data-icon="discount"></div>
-            <h3>Premium Discounts</h3>
-            <p>Special pricing across all Ausum offerings</p>
+            <div class="benefit-icon" data-icon="freedom"><i class="fa-solid fa-dove"></i></div>
+            <h3>Freedom</h3>
+            <p>To express oneself authentically, to inovate, and to pursue a life of meaning</p>
           </div>
           <div class="benefit-card">
-            <div class="benefit-icon" data-icon="recognition"></div>
-            <h3>Public Recognition</h3>
-            <p>Acknowledged as a founding supporter</p>
-          </div>
-          <div class="benefit-card">
-            <div class="benefit-icon" data-icon="priority"></div>
-            <h3>Priority Status</h3>
-            <p>First consideration in future funding rounds</p>
+            <div class="benefit-icon" data-icon="connection"><i class="fa-solid fa-handshake"></i></div>
+            <h3>Connection</h3>
+            <p>To heritage, to community, to global trends and to personal growth</p>
           </div>
         </div>
       </div>
@@ -366,7 +351,6 @@
           <h2>This isn't just funding. It's fuel for a movement.</h2>
           <p>Join us in building an African business ecosystem that inspires and empowers the next generation.</p>
           <div class="cta-buttons">
-            <a href="#" class="btn btn-primary btn-large">Contribute Now</a>
             <a href="#" class="btn btn-secondary btn-large">Contact Us</a>
           </div>
           <div class="newsletter">
