fixed an error in the index.html file

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="about-cta">
-          <a href="pages/about.html" class="btn btn-tertiary">Explore Our Story</a>
+          <a href="/about.html" class="btn btn-tertiary">Explore Our Story</a>
         </div>
       </div>
     </section>
