made changes in the about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Ausum Group | Beyond Sight</title>
+    <title>Inside Ausum Group | Beyond Sight</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,10 +28,10 @@
                 </div>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="#vision" class="nav-link">Vision</a></li>
+                    <li><a href="#who-we-are" class="nav-link">Who We Are</a></li>
                     <li><a href="#ecosystem" class="nav-link">Ecosystem</a></li>
                     <li><a href="#impact" class="nav-link">Impact</a></li>
-                    <li><a href="#journey" class="nav-link">Journey</a></li>
+                    <li><a href="#traction" class="nav-link">Traction</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
@@ -44,32 +44,37 @@
             <div class="hero-overlay"></div>
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Building a New Standard for African Living</h1>
-                    <p class="hero-subtitle">We are not just building products. We are shaping a lifestyle that embodies
-                        clarity, ownership, and Afro-modern identity.</p>
+                    <h1 class="hero-title">Inside Ausum Group</h1>
+                    <p class="hero-subtitle">A new chapter in African lifestyle is being written — one that fuses
+                        cultural authenticity, cutting-edge innovation, and holistic entrepreneurship. Here's how Ausum
+                        Group is building it.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Vision Section -->
-        <section class="vision section" id="vision">
+        <!-- Who We Are Section -->
+        <section class="vision section" id="who-we-are">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">A Movement Rooted in African Ingenuity</h2>
+                    <h2 class="section-title">A Bold Response to a Growing Market</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="vision-content">
                     <div class="vision-text">
-                        <p class="vision-intro">At Ausum Group, we are driven by a vision that looks far beyond the
-                            conventional. We're crafting The Ausum Life – a lifestyle defined by clarity, ownership, and
-                            Afro-modern self-expression.</p>
+                        <p class="vision-intro">Founded in Nairobi, Kenya, Ausum Group is driven by a vision that looks
+                            far beyond the conventional. We're creating a new African lifestyle narrative — The Ausum
+                            Life — focused on clarity, ownership, and Afro-modern self-expression.</p>
+                        <p>In a market characterized by outdated models and a lack of premium, culturally resonant
+                            options, we've identified a unique opportunity to serve the rising African middle class with
+                            authentic, world-class brands.</p>
                         <blockquote class="quote vision-quote">
-                            <p>"We saw limitations not as obstacles, but as profound opportunities."</p>
+                            <p>"We saw limitations not as obstacles, but as profound opportunities to redefine African
+                                lifestyle."</p>
                             <cite>— Dennis Musau, Founder</cite>
                         </blockquote>
                     </div>
                     <div class="vision-image">
-                        <img src="https://images.unsplash.com/photo-1653565684985-0b1a64cf7afc?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        <img src="https://images.unsplash.com/photo-1573164574511-73c773193279?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGFmcmljYW4lMjBidXNpbmVzcyUyMG1lZXRpbmd8ZW58MHx8MHx8fDA%3D"
                             alt="African innovation and growth" class="img-responsive">
                     </div>
                 </div>
@@ -80,8 +85,9 @@
         <section class="ecosystem-detailed section" id="ecosystem">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">The Ausum Ecosystem</h2>
-                    <p class="section-subtitle">Built to Elevate</p>
+                    <h2 class="section-title">A Multi-Pillar Strategy for Scalable Impact</h2>
+                    <p class="section-subtitle">Strategically designed ecosystem built to address multiple facets of
+                        African lifestyle and innovation</p>
                     <div class="accent-line"></div>
                 </div>
                 <div class="ecosystem-grid">
@@ -89,47 +95,47 @@
                         <div class="ecosystem-icon" data-icon="appeals">🕶️</div>
                         <h3>Ausum Appeals Ltd.</h3>
                         <h4>Redefining Personal Expression</h4>
-                        <p>Curated, fashion-forward eyewear that's deeply personal and authentically African.</p>
+                        <p>Premium, fashion-forward eyewear with an Afrocentric retail experience.</p>
                         <ul class="ecosystem-features">
                             <li>AI-powered try-ons</li>
-                            <li>Afrocentric retail experience</li>
-                            <li>Identity-driven design</li>
+                            <li>Tele-optometry services</li>
+                            <li>Lifestyle studios in development</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
                         <div class="ecosystem-icon" data-icon="nexus">⚙️</div>
                         <h3>Ausum Nexus Ltd.</h3>
-                        <h4>Strategic Innovation & Growth Engine</h4>
-                        <p>Empowering the African entrepreneurial landscape with scalable frameworks.</p>
+                        <h4>Strategic Innovation & SME Empowerment</h4>
+                        <p>Empowering African entrepreneurship through scalable frameworks.</p>
                         <ul class="ecosystem-features">
-                            <li>Innovation hub</li>
-                            <li>SME consulting</li>
                             <li>Venture development</li>
+                            <li>SME consulting</li>
+                            <li>Business blueprinting</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
                         <div class="ecosystem-icon" data-icon="studios">🎥</div>
                         <h3>Ausum Studios</h3>
-                        <h4>Crafting Narratives, Amplifying Voices</h4>
-                        <p>We shape stories that resonate — not just sell.</p>
+                        <h4>Media Engine of the Ecosystem</h4>
+                        <p>Producing digital & brand content that drives growth across pillars.</p>
                         <ul class="ecosystem-features">
-                            <li>Content engine</li>
-                            <li>Brand building</li>
-                            <li>Strategic storytelling</li>
+                            <li>Visual storytelling</li>
+                            <li>Brand development</li>
+                            <li>Content strategy</li>
                         </ul>
                     </div>
 
                     <div class="ecosystem-card">
                         <div class="ecosystem-icon" data-icon="just">💬</div>
                         <h3>Just Ausum</h3>
-                        <h4>Inspiring Purpose & Connection</h4>
-                        <p>The heart of our brand. Purpose meets presence.</p>
+                        <h4>Purpose & Cultural Connection</h4>
+                        <p>Building community around the Ausum Life.</p>
                         <ul class="ecosystem-features">
-                            <li>Podcast platform</li>
+                            <li>Inspirational platform</li>
+                            <li>Cultural content</li>
                             <li>Community building</li>
-                            <li>Purpose-driven content</li>
                         </ul>
                     </div>
                 </div>
@@ -140,22 +146,22 @@
         <section class="impact section" id="impact">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">More Than Products — A Lifestyle</h2>
+                    <h2 class="section-title">More Than Products — A Lifestyle Movement</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="impact-content">
                     <div class="impact-highlights">
                         <div class="impact-card">
                             <h3>Cultural Pride</h3>
-                            <p>Eyewear as an expression of cultural pride and personal empowerment</p>
+                            <p>Positioning eyewear as a symbol of identity and cultural pride</p>
                         </div>
                         <div class="impact-card">
                             <h3>Tech-Driven</h3>
-                            <p>Afro-luxury experiences powered by cutting-edge technology</p>
+                            <p>Blending Afro-luxury aesthetics with technological convenience</p>
                         </div>
                         <div class="impact-card">
                             <h3>Community</h3>
-                            <p>Building identity and community through content and values</p>
+                            <p>Shaping culture through content and community building</p>
                         </div>
                     </div>
                     <div class="testimonials">
@@ -164,7 +170,7 @@
                             <cite>— Sarah K., Early Customer</cite>
                         </div>
                         <div class="testimonial">
-                            <p>"Finally, eyewear that speaks to our aesthetic and values."</p>
+                            <p>"Finally, a vision that truly understands and celebrates African identity."</p>
                             <cite>— James M., Brand Partner</cite>
                         </div>
                     </div>
@@ -172,18 +178,18 @@
             </div>
         </section>
 
-        <!-- Journey Section -->
-        <section class="journey section" id="journey">
+        <!-- Traction Section -->
+        <section class="traction section" id="traction">
             <div class="container">
                 <div class="section-header">
-                    <h2 class="section-title">Our Journey: Built with Passion and Precision</h2>
+                    <h2 class="section-title">A Strategic Foundation — Built to Scale</h2>
                     <div class="accent-line"></div>
                 </div>
                 <div class="journey-timeline">
                     <div class="timeline-phase">
                         <h3>Phase 1: Foundation</h3>
                         <ul>
-                            <li>Launch of eyewear collection</li>
+                            <li>Proven eyewear operations</li>
                             <li>Market validation</li>
                             <li>Initial partnerships</li>
                         </ul>
@@ -192,18 +198,32 @@
                         <h3>Phase 2: Growth</h3>
                         <ul>
                             <li>E-commerce expansion</li>
-                            <li>Content platform launch</li>
-                            <li>Tech integration</li>
+                            <li>Pop-up retail launch</li>
+                            <li>Ecosystem development</li>
                         </ul>
                     </div>
                     <div class="timeline-phase">
                         <h3>Phase 3: Scale</h3>
                         <ul>
-                            <li>Pan-African presence</li>
+                            <li>Pan-African expansion</li>
                             <li>Global partnerships</li>
-                            <li>Innovation hub</li>
+                            <li>Full ecosystem integration</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Vision Forward Section -->
+        <section class="vision-forward section">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Africa, Reimagined — Globally Resonant</h2>
+                    <div class="accent-line"></div>
+                </div>
+                <div class="vision-content">
+                    <p class="vision-intro">This is more than our story; it's an invitation to see the world
+                        differently... and to co-create a future where African ingenuity and style inspire globally.</p>
                 </div>
             </div>
         </section>
@@ -212,8 +232,22 @@
         <section class="cta section" id="contact">
             <div class="container">
                 <div class="cta-content">
-                    <h2>This Is More Than Our Story — It's an Invitation</h2>
-                    <p>We are offering a compelling, accessible blueprint for the Ausum Life.</p>
+                    <h2>Let's Build the Ausum Future Together</h2>
+                    <p>Whether you're an investor, partner, or visionary aligned with our mission — we welcome your
+                        collaboration.</p>
+                    <div class="cta-buttons">
+                        <a href="#" class="btn btn-primary btn-large">Invest With Us</a>
+                        <a href="#" class="btn btn-secondary btn-large">Partner With Us</a>
+                        <a href="#" class="btn btn-tertiary btn-large">Join Our Vision</a>
+                    </div>
+                    <div class="newsletter">
+                        <h3>Stay Connected</h3>
+                        <p>Join our newsletter for exclusive updates and opportunities.</p>
+                        <form class="newsletter-form">
+                            <input type="email" placeholder="Your email address" required>
+                            <button type="submit" class="btn btn-tertiary">Subscribe</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
@@ -230,10 +264,10 @@
                     <div class="footer-column">
                         <h3>Company</h3>
                         <ul>
-                            <li><a href="#vision">Vision</a></li>
+                            <li><a href="#who-we-are">Who We Are</a></li>
                             <li><a href="#ecosystem">Ecosystem</a></li>
                             <li><a href="#impact">Impact</a></li>
-                            <li><a href="#journey">Journey</a></li>
+                            <li><a href="#traction">Traction</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
