added new pages for each pillar

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     </section>
 
     <!-- Ecosystem Section -->
+    <!-- Ecosystem Section -->
     <section class="ecosystem section" id="ecosystem">
       <div class="container">
         <div class="section-header">
@@ -129,7 +130,7 @@
           <div class="accent-line"></div>
         </div>
         <div class="pillar-container">
-          <div class="pillar-card">
+          <a href="nexus.html" class="pillar-card">
             <div class="pillar-icon" data-icon="nexus"></div>
             <h3>Ausum Nexus Ltd</h3>
             <ul>
@@ -139,11 +140,11 @@
             </ul>
             <div class="pillar-overlay">
               <p>Our flagship company driving innovation and business growth across multiple sectors.</p>
-              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
+              <button class="btn btn-secondary">Learn More</button>
             </div>
-          </div>
+          </a>
 
-          <div class="pillar-card">
+          <a href="appeals.html" class="pillar-card">
             <div class="pillar-icon" data-icon="appeals"></div>
             <h3>Ausum Appeals</h3>
             <ul>
@@ -154,25 +155,25 @@
             <div class="pillar-overlay">
               <p>Authentic African eyewear and lifestyle products that combine style, quality, and cultural heritage.
               </p>
-              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
+              <button class="btn btn-secondary">Learn More</button>
             </div>
-          </div>
+          </a>
 
-          <div class="pillar-card">
-            <div class="pillar-icon" data-icon="crust"></div>
-            <h3>Nexus Crust Consultancy</h3>
+          <a href="studios.html" class="pillar-card">
+            <div class="pillar-icon" data-icon="studios"></div>
+            <h3>Ausum Studios</h3>
             <ul>
-              <li>SME advisory</li>
-              <li>Business development</li>
-              <li>Strategic planning</li>
+              <li>Content creation</li>
+              <li>Brand development</li>
+              <li>Creative services</li>
             </ul>
             <div class="pillar-overlay">
-              <p>Empowering small and medium enterprises with the tools and knowledge to scale effectively.</p>
-              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
+              <p>Our creative powerhouse producing compelling content that drives growth across the ecosystem.</p>
+              <button class="btn btn-secondary">Learn More</button>
             </div>
-          </div>
+          </a>
 
-          <div class="pillar-card">
+          <a href="just.html" class="pillar-card">
             <div class="pillar-icon" data-icon="just"></div>
             <h3>Just Ausum</h3>
             <ul>
@@ -183,9 +184,9 @@
             <div class="pillar-overlay">
               <p>Content platform sharing inspirational stories and insights from African innovators and entrepreneurs.
               </p>
-              <a href="#ecosystem" class="btn btn-secondary">Learn More</a>
+              <button class="btn btn-secondary">Learn More</button>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
