--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                         </blockquote>
                     </div>
                     <div class="vision-image">
-                        <img src="https://images.unsplash.com/photo-1573164574511-73c773193279?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGFmcmljYW4lMjBidXNpbmVzcyUyMG1lZXRpbmd8ZW58MHx8MHx8fDA%3D"
-                            alt="African innovation and growth" class="img-responsive">
+                        <img src="https://images.pexels.com/photos/2422294/pexels-photo-2422294.jpeg"
+                            alt="people in a meeting" class="img-responsive" />
                     </div>
                 </div>
             </div>
